--- a/Fesh.AutoCAD/Fesh.AutoCAD.fsproj
+++ b/Fesh.AutoCAD/Fesh.AutoCAD.fsproj
@@ -41,8 +41,8 @@
     <!--this reference is needed for tooling only, it might not be installed on host PC. see also https://github.com/fsprojects/IfSharp/issues/213 -->
     <PackageReference Include="NETStandard.Library" Version="2.0.3" GeneratePathProperty="true" />
 
-    <PackageReference Include="Speckle.AutoCAD.API" Version="2021.*" Condition="'$(TargetFramework)' == 'net48'" PrivateAssets="all" ExcludeAssets="runtime" />
-    <PackageReference Include="Speckle.AutoCAD.API" Version="2025.*" Condition="'$(TargetFramework)' == 'net8.0-windows'" PrivateAssets="all" ExcludeAssets="runtime" />
+    <PackageReference Include="AutoCAD.NET" Version="20.*" Condition="'$(TargetFramework)' == 'net48'" PrivateAssets="all" ExcludeAssets="runtime" />
+    <PackageReference Include="AutoCAD.NET" Version="25.*" Condition="'$(TargetFramework)' == 'net8.0-windows'" PrivateAssets="all" ExcludeAssets="runtime" />
     <PackageReference Include="Fesh" Version="0.21.0" GeneratePathProperty="true" />
     <!-- <ProjectReference Include="../Fesh/FeshHosting.fsproj" /> -->
   </ItemGroup>
